--- a/templates/key_word_authorisation/index.html.twig
+++ b/templates/key_word_authorisation/index.html.twig
@@ -1,4 +1,3 @@
-{% extends 'base.html.twig' %}
 {% block head %}
     {% block title %}<title>7 de mayo de 2022</title>{% endblock %}
     {% block stylesheets %}
@@ -14,7 +13,7 @@
 {% block body %}
     <div class="screen">
 
-                <div id="puto_panel" class="card-panel white">
+                <div class="card-panel white">
                     <span class="black-text">Si has llegado hasta aquí es porque queremos compartir contigo un día muy
                         especial: ¡nuestra boda! El día <strong>7 de mayo de 2022</strong> esperamos pasar un día excepcional
                         con vosotros. En esta web encontraréis información sobre el enlace, entre otras cosas.
