--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,7 +1,14 @@
-{% extends 'base.html.twig' %}
 
-{% block title %}Register{% endblock %}
-
+{% block title %}<title>Registro</title>{% endblock %}
+{% block stylesheets %}
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- Materialize icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+{% endblock %}
 {% block body %}
     <div class="registration_form" style="padding:250px 500px 250px 500px">
         <h1>Registro</h1>
